--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/conarti/layout-designer-project-lvl2#readme",
   "devDependencies": {
+    "htmlhint": "^0.16.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
     "surge": "^0.20.1"
+  },
+  "dependencies": {
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard-scss": "^2.0.1"
   }
 }
