--- a/.stylelintrc
+++ b/.stylelintrc
@@ -15,7 +15,7 @@
     "order/properties-order": [],
     "at-rule-empty-line-before": ["always",
       {
-        "ignoreAtRules": ["import"],
+        "ignoreAtRules": ["import", "else"],
         "except": ["first-nested"]
       }],
     "plugin/rational-order": [true, {
